<resources>
    <string name="app_name">LoanLink</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="img3">IMG3</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="enter_aadhar_number">enter aadhar number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">enter mobile number</string>
    <string name="or">or</string>
    <string name="get_otp">GET OTP</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">enter otp</string>
    <string name="login1">LOGIN</string>
    <string name="are_you_a_robot">Are you a robot</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="todo_">TODO</string>
    <string name="register">Register</string>
    <string name="left"><![CDATA[<-]]></string>
    <string name="todo__">TODO</string>
    <string name="last_name">Last Name</string >
    <string name="details">Enter Details</string >
</resources>